--- a/applications/argocd-install-ingress-nginx/oauth-proxy.yaml
+++ b/applications/argocd-install-ingress-nginx/oauth-proxy.yaml
@@ -25,7 +25,10 @@ spec:
     spec:
       containers:
         - args:
+            - --email-domain=jlh.name
             - --http-address=0.0.0.0:4180
+          # Register a new application
+          # https://github.com/settings/applications/new
           env:
             - name: OAUTH2_PROXY_PROVIDER
               value: oidc
@@ -52,8 +55,6 @@ spec:
                 secretKeyRef:
                   name: oauth2-proxy
                   key: oauth2_proxy_cookie_secret
-            - name: OAUTH2_PROXY_EMAIL_DOMAIN
-              value: jlh.name
           image: quay.io/oauth2-proxy/oauth2-proxy:latest
           imagePullPolicy: Always
           name: oauth2-proxy
