Fix oauth proxy 5

--- a/applications/argocd-install-ingress-nginx/oauth-proxy.yaml
+++ b/applications/argocd-install-ingress-nginx/oauth-proxy.yaml
@@ -89,8 +89,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
 spec:
   rules:
-    - host: oauth.jlh.name
-      http:
+    - http:
         paths:
           - path: /oauth2
             pathType: Prefix
