--- a/applications/media/prowlarr.yaml
+++ b/applications/media/prowlarr.yaml
@@ -82,7 +82,7 @@ spec:
       http:
         paths:
           - path: /
-            pathType: Prefix
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: prowlarr
