--- a/applications/argocd-install-ingress-nginx/oauth-proxy.yaml
+++ b/applications/argocd-install-ingress-nginx/oauth-proxy.yaml
@@ -30,6 +30,8 @@ spec:
           # Register a new application
           # https://github.com/settings/applications/new
           env:
+            - name: OAUTH2_PROXY_WHITELIST_DOMAIN
+              value: "*.jlh.name"
             - name: OAUTH2_PROXY_PROVIDER
               value: oidc
             - name: OAUTH2_PROXY_PROVIDER_DISPLAY_NAME
