--- a/applications/argocd-install-ingress-nginx/oauth-proxy.yaml
+++ b/applications/argocd-install-ingress-nginx/oauth-proxy.yaml
@@ -26,7 +26,7 @@ spec:
       containers:
         - args:
             - --email-domain=jlh.name
-            - --whitelist-domain=*.jlh.name
+            - '--whitelist-domain="*.jlh.name"'
             - --http-address=0.0.0.0:4180
           # Register a new application
           # https://github.com/settings/applications/new
