--- a/applications/media/prowlarr.yaml
+++ b/applications/media/prowlarr.yaml
@@ -71,6 +71,14 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/auth-url: "https://oauth.jlh.name/oauth2/auth"
     nginx.ingress.kubernetes.io/auth-signin: "https://oauth.jlh.name/oauth2/start?rd=https://$host$escaped_request_uri"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      auth_request_set $name_upstream_1 $upstream_cookie_name_1;
+      
+      access_by_lua_block {
+        if ngx.var.name_upstream_1 ~= "" then
+          ngx.header["Set-Cookie"] = "name_1=" .. ngx.var.name_upstream_1 .. ngx.var.auth_cookie:match("(; .*)")
+        end
+      }
   name: prowlarr
 spec:
   tls:
