--- a/applications/media/prowlarr.yaml
+++ b/applications/media/prowlarr.yaml
@@ -69,6 +69,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
+    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
     nginx.ingress.kubernetes.io/auth-url: "https://oauth.jlh.name/oauth2/auth"
     nginx.ingress.kubernetes.io/auth-signin: "https://oauth.jlh.name/oauth2/start?rd=https://$host$escaped_request_uri"
     nginx.ingress.kubernetes.io/configuration-snippet: |
