--- a/applications/lemmy/pictrs.yaml
+++ b/applications/lemmy/pictrs.yaml
@@ -44,6 +44,10 @@ spec:
         runAsUser: 1000
         runAsGroup: 3000
         fsGroup: 2000
+      volumes:
+        - name: pictrs
+          persistentVolumeClaim:
+            claimName: pictrs
 ---
 apiVersion: v1
 kind: Service
