--- a/applications/lemmy/database.yaml
+++ b/applications/lemmy/database.yaml
@@ -1,7 +1,7 @@
 apiVersion: postgres-operator.crunchydata.com/v1beta1
 kind: PostgresCluster
 metadata:
-  name: lemmy
+  name: lemmy-db
 spec:
   users:
     - name: lemmy
