--- a/applications/lemmy/database.yaml
+++ b/applications/lemmy/database.yaml
@@ -5,6 +5,8 @@ metadata:
 spec:
   users:
     - name: lemmy
+      databases:
+        - lemmy
   image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres:ubi8-15.2-0
   postgresVersion: 15
   instances:
