--- a/applications/lemmy/database.yaml
+++ b/applications/lemmy/database.yaml
@@ -7,6 +7,7 @@ spec:
     - name: lemmy
       databases:
         - lemmy
+      options: "SUPERUSER"
   image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres:ubi8-15.2-0
   postgresVersion: 15
   instances:
