Fix nginx run vol

--- a/applications/lemmy/nginx.yaml
+++ b/applications/lemmy/nginx.yaml
@@ -23,6 +23,8 @@ spec:
           volumeMounts:
             - name: cache
               mountPath: /var/cache/nginx
+            - name: run
+              mountPath: /var/run
             - name: tmp
               mountPath: /tmp/nginx
             - mountPath: /etc/nginx/nginx.conf
@@ -45,6 +47,8 @@ spec:
         fsGroup: 2000
       volumes:
         - name: cache
+          emptyDir: {}
+        - name: run
           emptyDir: {}
         - name: tmp
           emptyDir: {}
