--- a/applications/lemmy/database.yaml
+++ b/applications/lemmy/database.yaml
@@ -11,7 +11,8 @@ spec:
   patroni:
     dynamicConfiguration:
       postgresql:
-        pg_hba: []
+        pg_hba:
+          - "hostnossl all all all md5"
   image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres:ubi8-15.2-0
   postgresVersion: 15
   instances:
