--- a/applications/lemmy/backend.yaml
+++ b/applications/lemmy/backend.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: lemmy
-          image: dessalines/lemmy:0.17.4-rc.5
+          image: dessalines/lemmy:0.17.3
           imagePullPolicy: Always
           env:
             - name: RUST_LOG
