Make lemmy logs quieter

--- a/applications/lemmy/pictrs.yaml
+++ b/applications/lemmy/pictrs.yaml
@@ -24,6 +24,8 @@ spec:
                 secretKeyRef:
                   name: pictrs
                   key: API_KEY
+            - name: RUST_LOG
+              value: "warn"
           ports:
             - containerPort: 8080
           securityContext:
