--- a/applications/lemmy/backend.yaml
+++ b/applications/lemmy/backend.yaml
@@ -20,7 +20,7 @@ spec:
           imagePullPolicy: Always
           env:
             - name: RUST_LOG
-              value: "warn,lemmy_server=info,lemmy_api=info,lemmy_api_common=info,lemmy_api_crud=info,lemmy_apub=info,lemmy_db_schema=info,lemmy_db_views=info,lemmy_db_views_actor=info,lemmy_db_views_moderator=info,lemmy_routes=info,lemmy_utils=info,lemmy_websocket=info"
+              value: "warn"
           ports:
             - containerPort: 8536
           volumeMounts:
