--- a/applications/media/sonarr.yaml
+++ b/applications/media/sonarr.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: sonarr
-        image: cr.hotio.dev/hotio/sonarr:v4-4.0.0.535
+        image: cr.hotio.dev/hotio/sonarr:4.0.0.544
         env:
         - name: TZ
           value: "europe/stockholm"
