Try to fix qb wg

--- a/applications/media/qbittorrent.yaml
+++ b/applications/media/qbittorrent.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         app: qbittorrent
     spec:
+      dnsPolicy: None  # fix wireguard resolv.conf issue
       initContainers:
       - name: sysctl-setter
         image: alpine
