--- a/applications/media/qbittorrent.yaml
+++ b/applications/media/qbittorrent.yaml
@@ -14,6 +14,9 @@ spec:
         app: qbittorrent
     spec:
       dnsPolicy: None  # fix wireguard resolv.conf issue
+      dnsConfig:
+        nameservers:
+          - 10.64.0.1 # this is an example
       initContainers:
       - name: sysctl-setter
         image: alpine
