Fix wg file permissions

--- a/applications/media/qbittorrent.yaml
+++ b/applications/media/qbittorrent.yaml
@@ -87,6 +87,7 @@ spec:
       - name: wg-config
         secret:
           secretName: mullvad-wg-config
+          defaultMode: 0400
       - name: host-modules
         hostPath:
           path: /lib/modules
