--- a/applications/lemmy/ui.yaml
+++ b/applications/lemmy/ui.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: lemmy
-          image: dessalines/lemmy-ui:0.17.4
+          image: dessalines/lemmy-ui:0.18.0-rc.7
           imagePullPolicy: Always
           env:
             - name: LEMMY_UI_LEMMY_INTERNAL_HOST
