--- a/applications/lemmy/backend.yaml
+++ b/applications/lemmy/backend.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: lemmy
-          image: dessalines/lemmy:0.18.0-rc.6
+          image: dessalines/lemmy:0.18.5
           imagePullPolicy: Always
           env:
             - name: RUST_LOG
