--- a/nodes/k3s-config.yaml
+++ b/nodes/k3s-config.yaml
@@ -1,7 +1,29 @@
 
 # Disable default networking to allow for Cilium CNI
+# https://docs.cilium.io/en/stable/installation/k3s/
 flannel-backend: "none"
 disable-network-policy: true
 
-# Disable k3s default ingress
-disable: "traefik"
+# Disable kubeproxy to allow for Cilium kubeproxy replacement
+disable-kube-proxy: true
+egress-selector-mode: pod # https://docs.k3s.io/installation/network-options#control-plane-egress-selector-configuration
+
+# Disable k3s default ingress and lb
+disable: "servicelb,traefik"
+
+# Prioritize IPv6
+# https://docs.k3s.io/installation/network-options#dual-stack-ipv4--ipv6-networking
+kubelet-arg: "node-ip=::"
+
+# ipv4 and ipv6 CIDRs
+# https://yolops.net/k8s-dualstack-cilium.html
+cluster-cidr: 2600:70ff:b04f:beef:0::/80,10.42.0.0/16
+service-cidr: 2600:70ff:b04f:beef:1:0:0::/112,10.43.0.0/16
+kube-controller-manager-arg: "node-cidr-mask-size-ipv6=96"
+
+# Fix control plane api routing during cilium initialization
+https-listen-port: 443
+tls-san: "cluster-api.hlund.jlh.name"
+
+# Set cluster name
+cluster-domain: "cluster.hlund.jlh.name"
